--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-migrations-bundle": "dev-master",
-        "doctrine/migrations": "dev-master"
+        "doctrine/migrations": "dev-master",
+        "pagerfanta/pagerfanta": "1.0.*@dev",
+        "white-october/pagerfanta-bundle": "1.0.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
